@@ -69,7 +69,8 @@ namespace Orthanc
 
     bool ExecutePredicate();
 
-    void ExecuteToJson(Json::Value& result);                    
+    void ExecuteToJson(Json::Value& result,
+                       bool keepStrings);
 
     void ExecuteToString(std::string& result);
   };
